add filter of subj and genre

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
         <h2 class="main-title">Витрина</h2>
         <form class="select-block" id="filterform" role="form">    
             <div class="select-block__item">               
-                <select id="subj" name="subj" onchange="filterform.submit()" class="select-block__select">
-                    <option value="">Все предметы</option>
+                <select id="subj" name="subj" class="select-block__select">
+                    <option value="all">Все предметы</option>
                 </select>
             </div>   
             <div class="select-block__item">
-                <select id="genre" name="genre" onchange="filterform.submit()" class="select-block__select">
-                    <option value="">Все жанры</option>
+                <select id="genre" name="genre" class="select-block__select">
+                    <option value="all">Все жанры</option>
                 </select>
             </div>
             <div class="select-block__item">
-                <select id="grade" name="grade" onchange="filterform.submit()" class="select-block__select">
-                    <option value="">Все классы</option>
+                <select id="grade" name="grade" class="select-block__select">
+                    <option value="all">Все классы</option>
                 </select>
             </div>
             <div class="select-block__item">                       
