add footer style

--- a/index.html
+++ b/index.html
@@ -83,17 +83,33 @@
     </main>
     <footer class="footer__wrapper">
         <div class="footer">
-            <div class="footer-legal">
+            <div class="footer__information">
                 <p>&copy; <a href="http://physiconlab.ru">ООО &laquo;Физикон Лаб&raquo;</a>, 2013&mdash;2021</p>
                 <p><a rel="nofollow" href="/privacy">Пользовательское соглашение</a></p>
             </div>
-            <ul class="footer-social">
-                <li><a href="https://twitter.com/oblako_znanij" class="twitter">Twitter</a></li>
-                <li><a href="http://vk.com/oblako_znanij" class="vkontakte">Vkontakte</a></li>
-                <li><a href="https://www.facebook.com/oblakoznanij/?ref=oblako" class="facebook">Facebook</a></li>
-                <li><a href="https://www.instagram.com/oblako_znanij/" class="instagram">Instagram</a></li>                       
+            <ul class="footer__icons">
+                <li class="footer__icons-item">
+                    <a href="https://twitter.com/oblako_znanij" class="footer__icons-link">
+                        <img src="src/icons/icon-twitter.svg" alt="Twitter" />
+                    </a>
+                </li>
+                <li class="footer__icons-item">
+                    <a href="http://vk.com/oblako_znanij" class="footer__icons-link">
+                        <img src="src/icons/icon-vk.svg" alt="Vkontakte" />
+                    </a>
+                </li>
+                <li class="footer__icons-item">
+                    <a href="https://www.facebook.com/oblakoznanij/?ref=oblako" class="footer__icons-link">
+                        <img src="src/icons/icon-fb.svg" alt="Facebook" />
+                    </a>
+                </li>
+                <li class="footer__icons-item">
+                    <a href="https://www.instagram.com/oblako_znanij/" class="footer__icons-link">
+                        <img src="src/icons/icon-inst.svg" alt="Instagram" />
+                    </a>
+                </li>                     
             </ul>
-            <div class="footer-legal">
+            <div class="footer__information">
                 <p><a href="tel:+74987446757">+7 (499) 322-07-57</a>, <a href="mailto:info@imumk.ru">info@imumk.ru</a></p>
                 <p><a rel="nofollow" href="/regulations">Правила пользования сайтом</a></p>
             </div>
